--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -130,3 +131,5 @@ tqt/control/Timetag Calibration Data1.txt
 
 old_interface.py
 code.txt
+config.yaml
+.DS_Store
